# momtrop

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: rust.yml
benches/: gamma_bench.rs  graph_bench.rs
src/: float.rs  gamma.rs  lib.rs  log.rs  matrix.rs  mimic_rng.rs  parse.rs  preprocessing.rs  python.rs  rng.rs  sampling.rs  symbolic_polynomail.rs  vector.rs
tests/: test_prec_eq.rs  triangle.rs
trop_paper_cards/: 2_point_3_loop.gL  2_point_4_loop.gL  3_point_1_loop.gL  4_point_4_loop.gL  4_point_6_loop.gL  6_point_2_loop.gL  photons.gL
