[package]
name = "momtrop"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = []
sympol = ["dep:symbolica"]


[[bench]]
name = "gamma_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[profile.release]
lto = "fat"

[dependencies]
smallvec = "1.13.2"
ahash = "0.8.11"
num = { version = "0.4.1", features = ["serde"] }
f128 = { git = "https://github.com/benruijl/f128" }
statrs = "0.16.0"
itertools = "0.12.1"
rand = "0.8.5"
criterion = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
symbolica = { version = "0.11.0", optional = true}
