[package]
name = "momtrop"
version = "0.2.1"
edition = "2024"
license = "MIT"
keywords = ["monte-carlo", "high-energy-physics"]
exclude = ["/trop_paper_cards"]
repository = "https://github.com/alphal00p/momtrop"
description = "Simple rust crate for tropical sampling in momentum space"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = []

[[bench]]
name = "gamma_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[profile.release]
lto = "fat"

[dependencies]
smallvec = "1.13.2"
ahash = "0.8.11"
statrs = "0.16.0"
itertools = "0.12.1"
rand = "0.8.5"
criterion = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
ref-ops = "0.2.5"
bincode = "2.0.1"
